--- a/minilotto/res/layout/welcome_layout.xml
+++ b/minilotto/res/layout/welcome_layout.xml
@@ -10,7 +10,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-   
+        android:background="#0d2037"
+        android:textColor="#f5f7fa"
         android:text="Willkommen zu Mini Lotto!" />
 
     <Button
@@ -21,7 +22,9 @@
         android:layout_centerHorizontal="true"
         android:text="Minilotto Spielen"
               
-       />
+         android:background="#eff3f7"
+       
+        android:textColor="#29405b"  />
 
     <TextView
         android:id="@+id/txtSpiel_Hinweis"
@@ -31,9 +34,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/TextView03"
-       
+        android:background="#AAf3f8fc"
         android:text=""
-        />
+        android:textColor="#000000" />
 
   
 
@@ -43,10 +46,10 @@
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/btnPrivate_Informationen"
-       
+        android:background="#eff3f7"
         android:gravity="center"
         android:text="Spiel Hinweise"
-       
+        android:textColor="#29405b"
         android:textSize="18sp"
        />
 
@@ -56,10 +59,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/btnMinilotto_Spielen"
-       
+        android:background="#0d2037"
         android:gravity="center"
     
-       />
+        android:textColor="#394f6a" />
 
     <Button
         android:id="@+id/btnPrivate_Informationen"
@@ -67,9 +70,9 @@
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/TextView02"
-      
+        android:background="#e4e8ec"
         android:text="Private Information"
-         />
+        android:textColor="#29405b" />
 
     <TextView
         android:id="@+id/TextView03"
@@ -77,8 +80,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/txtHinweis"
-    
+        android:background="#0d2037"
         android:gravity="center"
-      />
+        android:textColor="#394f6a" />
 
 </RelativeLayout>
