--- a/minilotto/res/layout/activity_main.xml
+++ b/minilotto/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    
+    android:background="@drawable/android_back_main"
     tools:context="com.minilotto.MainActivity$PlaceholderFragment" >
 
     <EditText
@@ -14,8 +14,8 @@
         android:layout_marginTop="18dp"
         android:ems="12"
         android:hint="Password"
-      
-      />
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb" />
 
     <Button
         android:id="@+id/btnRegister"
@@ -24,10 +24,10 @@
         android:layout_below="@+id/btnLogin"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
-       
+        android:background="#eff3f7"
         android:ems="12"
         android:text="Register"
-         />
+        android:textColor="#29405b" />
 
     <EditText
         android:id="@+id/editUsername"
@@ -37,7 +37,8 @@
         android:layout_marginTop="200dp"
         android:ems="12"
         android:hint="Username"
-       />
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -46,10 +47,10 @@
         android:layout_alignLeft="@+id/btnRegister"
         android:layout_below="@+id/editPassword"
         android:layout_marginTop="37dp"
-        
+        android:background="#eff3f7"
         android:ems="12"
         android:text="Login"
-      />
+        android:textColor="#29405b" />
 
     <ImageView
         android:id="@+id/imageView1"
