--- a/minilotto/res/layout/new_spiel_erstellen.xml
+++ b/minilotto/res/layout/new_spiel_erstellen.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-  
+    android:background="@drawable/android_back_main"
     >
 
     <TextView
@@ -11,10 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-  
+        android:background="#0d2037"
+        android:textColor="#f5f7fa"
         android:gravity="center"
         android:text="Neues Spiel erstellen:" />
-  
+
     <EditText
         android:id="@+id/editMaxSpieler"
         android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
         android:ems="5"
         android:hint= ""
         android:inputType="number"
-       >
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb" >
 
         <requestFocus />
     </EditText>
@@ -39,7 +41,7 @@
         android:layout_below="@+id/editMaxSpieler"
         android:layout_marginTop="32dp"
         android:text="Einsatz "
-   />
+        android:textColor="#f5f7fa" />
 
     <EditText
         android:id="@+id/editEinsatz"
@@ -51,7 +53,8 @@
         android:ems="5"
         android:hint= ""
         android:inputType="number" 
-      />
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb"/>
 
     <RadioGroup
         android:id="@+id/radioGroup"
@@ -78,7 +81,7 @@
         android:layout_marginTop="79dp"
         android:layout_toRightOf="@+id/radioGroup"
         android:text="Max Spieler : "
-         />
+        android:textColor="#f5f7fa" />
 
     <Button
         android:id="@+id/btnErstellen"
@@ -87,8 +90,9 @@
         android:layout_below="@+id/radioGroup"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-       android:text="Erstellen"
-       />
+        android:background="#eff3f7"
+        android:text="Erstellen"
+        android:textColor="#29405b" />
 
     <TextView
         android:id="@+id/TextView01"
@@ -97,6 +101,6 @@
         android:layout_above="@+id/radioGroup"
         android:layout_toRightOf="@+id/editEinsatz"
         android:text="Euro"
-     />
+        android:textColor="#f5f7fa" />
 
 </RelativeLayout>
