--- a/minilotto/res/layout/register_layout.xml
+++ b/minilotto/res/layout/register_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-   >
+    android:background="@drawable/android_back_main">
 
     <EditText
         android:id="@+id/editPasswordsReg"
@@ -14,7 +14,8 @@
         android:ems="12"
         android:hint= "Password"
         android:inputType="textPassword"
-       />
+         android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb"  />
 
     <EditText
         android:id="@+id/editEmailReg"
@@ -27,7 +28,8 @@
         android:ems="14"
         android:hint="E-Mail-Adresse"
         android:inputType="textEmailAddress"
-        />
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb" />
 
     <EditText
         android:id="@+id/editkontoReg"
@@ -39,7 +41,8 @@
         android:ems="12"
         android:hint="Guthaben"
         android:inputType="number"
-       />
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb" />
 
     <TextView
         android:id="@+id/textView1"
@@ -47,10 +50,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-      
+        android:background="#0d2037"
         android:gravity="center"
         android:text="Registrieren:"
-       />
+        android:textColor="#f5f7fa" />
 
     <EditText
         android:id="@+id/editUsernameReg"
@@ -61,7 +64,8 @@
         android:layout_marginTop="63dp"
         android:ems="12"
         android:hint="Username"
-       />
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb" />
 
     <Button
         android:id="@+id/button1"
@@ -70,9 +74,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="42dp"
-       
+        android:background="#eff3f7"
         android:ems="5"
         android:text="Registrieren"
-      />
+        android:textColor="#29405b" />
 
 </RelativeLayout>
