--- a/minilotto/res/layout/minilotto_layout.xml
+++ b/minilotto/res/layout/minilotto_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-  
+    android:background="@drawable/android_back_main" >
 
     <TextView
         android:id="@+id/ziehung"
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-     
+        android:background="#AAe8edf2"
         android:gravity="center"
         android:textSize="40dp" />
 
@@ -22,7 +22,7 @@
         android:layout_alignParentLeft="true"
         android:ems="10"
         android:text="Lottozahlen:"
-        
+        android:textColor="#2e445f"
         android:textSize="18sp" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/ziehung"
-    
+        android:background="#AAe8edf2"
         android:gravity="center"
         android:textSize="40dp" />
 
@@ -43,7 +43,7 @@
         android:layout_alignParentLeft="true"
         android:ems="10"
         android:text="Ihr Tipp:"
-       
+        android:textColor="#2e445f"
         android:textSize="18sp" >
 
         <requestFocus />
@@ -59,7 +59,8 @@
         android:ems="3"
         android:hint="z3"
         android:inputType="number"
-      
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb" />
 
     <EditText
         android:id="@+id/editZahl2"
@@ -71,7 +72,8 @@
         android:ems="3"
         android:hint="z2"
         android:inputType="number"
-   
+        android:textColor="#f5f7fa"
+        android:textColorHint="#b2b6bb" />
 
     <EditText
         android:id="@+id/editZahl1"
@@ -84,7 +86,7 @@
         android:hint="z1"
         android:inputType="number"
         android:textColor="#f5f7fa"
-      
+        android:textColorHint="#b2b6bb" />
 
     <TextView
         android:id="@+id/textView1"
@@ -92,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView2"
         android:layout_alignParentLeft="true"
-    
+        android:background="#0d2037"
         android:gravity="center"
         
         android:textColor="#f5f7fa" />
@@ -103,15 +105,16 @@
         android:layout_height="50dp"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/editZahl3"
-       
-     />
+        android:background="@drawable/los"
+        android:textColor="#29405b" />
+
     <Button
         android:id="@+id/refresh"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_above="@+id/textView1"
         android:layout_alignParentRight="true"
-    />
+        android:background="@drawable/refresh" />
 
     <TextView
         android:id="@+id/textView22"
@@ -119,8 +122,9 @@
         android:layout_height="150dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-                android:text="  "
-         />
+        android:background="#f0f2f5"
+        android:text="  "
+        android:textColor="#0d2037" />
 
     <TextView
         android:id="@+id/textView2"
@@ -129,7 +133,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/textView22"
-               android:text="  "
-        />
+        android:background="#AAf3f8fc"
+        android:text="  "
+        android:textColor="#0d2037" />
 
 </RelativeLayout>
