--- a/minilotto/res/values/styles.xml
+++ b/minilotto/res/values/styles.xml
@@ -4,17 +4,32 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
+   
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+ <style name="padded_linear_layout">
+        <item name="android:padding">16dp</item>
+    </style>
+    <style name="heading" parent="android:Widget.Holo.TextView">
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+    </style>
+    <style name="generic_text" parent="android:Widget.Holo.TextView">
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+    </style>
+    <style name="generic_button">
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+    </style>
+    <style name="zentrierter_text" parent="@style/generic_text">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_height">40sp</item>
+    </style>
+
 
 </resources>
